--- a/aulafront.css
+++ b/aulafront.css
@@ -6,14 +6,14 @@ body{
 .Title{
 font-size: 50px;
 text-align: center;
-color:blueviolet
+color:rgb(96, 12, 231)
 }
 .text{
     position: relative;
     margin-left: 50px;
 }
 .menu1{
-    color:blueviolet
+    color:rgb(96, 12, 231)
 
 }
 .menu{
